add loader in reg

--- a/front_end/src/index.css
+++ b/front_end/src/index.css
@@ -32,6 +32,11 @@
   color: white;
 }
 
+.login .loginForm button img,
+.reg .regForm button img {
+  width: 23px;
+}
+
 .image {
   background: url('../public/loginIMG.png');
   background-position: center;
