--- a/front_end/src/index.css
+++ b/front_end/src/index.css
@@ -17,6 +17,52 @@ body {
   margin-bottom: 50px;
 }
 
+.login .logo h4 {
+  cursor: pointer;
+  position: relative;
+  padding: 10px 20px;
+  background: white;
+  font-size: 28px;
+  border-top-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  transition: all 1s;
+}
+
+.login .logo h4:after,
+.login .logo h4:before {
+  content: " ";
+  width: 10px;
+  height: 10px;
+  position: absolute;
+  border: 0px solid #fff;
+  transition: all 1s;
+}
+
+.login .logo h4:after {
+  top: -1px;
+  left: -1px;
+  border-top: 5px solid black;
+  border-left: 5px solid black;
+}
+
+.login .logo h4:before {
+  bottom: -1px;
+  right: -1px;
+  border-bottom: 5px solid black;
+  border-right: 5px solid black;
+}
+
+.login .logo h4:hover {
+  border-top-right-radius: 0px;
+  border-bottom-left-radius: 0px;
+}
+
+.login .logo h4:hover:before,
+.login .logo h4:hover:after {
+  width: 100%;
+  height: 100%;
+}
+
 .login .loginForm input:focus,
 .reg .regForm input:focus {
   border: 1px solid #fb5572;
